NEWS - OpenPrinting CUPS Filters v1.27.5 - 2020-06-05
-----------------------------------------------------

CHANGES IN V2.0.0

	- libcupsfilters, parallel, test1284: Moved
	  IEEE1284-device-ID-related functions into the public API of
	  libcupsfilters.
	- foomatic-rip: Remove temporary file created during pdf-to-ps
	  conversion (Pull request #313).
	- libppd: Added PPD collection handling functions (based on
	  the code of cups-driverd in CUPS), for listing collections
	  of PPD files and picking a PPD out of the collection.  PPDs
	  can be in arbitrary subdirectory structures, .tar and
	  .tar.gz files, and also be generated by executables, as one
	  uses them with CUPS in /usr/lib/cups/driver. This is for
	  Printer Applications which retro-fit classic CUPS drivers.
	- libppd, libcupsfilters: Share the definition of logging functions
	  between the two libraries, so that the same logging functions
	  can be used with both.
	- Sample PPDs: Corrected manufacturer name in
	  Fuji_Xerox-DocuPrint_CM305_df-PDF.ppd.
	- texttopdf: Added support for PPD-less use.
	- libcupsfilters, imagetops: Introduced imagetops() filter
	  function for Printer Application to print on PostScript
	  printers. It is used to print images (IPP standard requires
	  at least JPEG to be accepted) without need of a PDF renderer
	  (imagetopdf -> pdftops) and without need to convert to
	  Raster (imagetoraster -> rastertops). The CUPS filter
	  imagetops uses this filter function now, too.
	- libcupsfilters, imagetopdf: Moved core functionality of
	  imagetopdf into the imagetopdf() filter function.
	- libcupsfilters, imagetoraster: Moved core functionality of
	  imagetoraster into the imagetoraster() filter function.
	- sys5ippprinter, cups-browsed: Removed sys5ippprinter, as
	  CUPS does not support System V interface scripts any
	  more. This first approach of PPD-less printing was also not
	  actually made use of.
	- libcupsfilters, gstoraster, gstopdf, gstopxl: Moved core