@@ -5,7 +5,8 @@ CHANGES IN V2.0.0
 
 	- libcupsfilters, parallel, test1284: Moved
 	  IEEE1284-device-ID-related functions into the public API of
-	  libcupsfilters.
+	  libcupsfilters, also made the internal functions public and
+	  renamed them all to ieee1284...().
 	- foomatic-rip: Remove temporary file created during pdf-to-ps
 	  conversion (Pull request #313).
 	- libppd: Added PPD collection handling functions (based on
